# SpyGRT

./: .gitignore  LICENSE  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.py
Dev_test/: 121622061907_cal - Copy.txt  121622061907_cal.txt  123122061443_cal.txt  Align_cameras_extended.ipynb  Align_cameras_extended_Reset.ipynb  Cal_Verification.ipynb  Cuda_track_dev.ipynb  DualCamera_Testing.ipynb  ESTRO_ANALYSIS.ipynb  ESTRO_ANALYSIS_133.ipynb  ESTRO_ANALYSIS_134.ipynb  ESTRO_ANALYSIS_135.ipynb  Rec_Verification.ipynb  Track_Robot.ipynb  new_tracker_dev.ipynb  r1_cal.txt  r2_cal.txt
Dev_test/.ipynb_checkpoints/: Align_cameras_extended-checkpoint.ipynb  Cuda_track_dev-checkpoint.ipynb  DualCamera_Testing-checkpoint.ipynb  ESTRO_ANALYSIS_133-checkpoint.ipynb  ESTRO_ANALYSIS_134-checkpoint.ipynb  ESTRO_ANALYSIS_135-checkpoint.ipynb  ROI_Dev-checkpoint.ipynb  Rec_Verification-checkpoint.ipynb  Track_Robot-checkpoint.ipynb  new_tracker_dev-checkpoint.ipynb
Dev_test_temp/: Align_cameras_extended_Reset.ipynb  DualCamera_Testing.ipynb  ROI_Dev.ipynb  Rec_Verification.ipynb
Dev_test_temp/.ipynb_checkpoints/: Cal_Verification-checkpoint.ipynb
Examples/: Calibration_From_Recordings.ipynb  NewCalibration.ipynb  NewCalibration.py  README.md  Recording_Visualization.ipynb  StreamAccess.ipynb  StreamAccess.py  TrackingExample.py
SampleData/: CalibrationBoard.pptx
SampleData/CalibrationResults/: 121622060739_cal.txt  123122061763_cal.txt
spygrt/: __init__.py  calibration.py  stream.py  tracker.py
